<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="40dp"
            android:paddingHorizontal="20dp"
            android:gravity="center">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardCornerRadius="12dp"
                app:strokeWidth="0dp"
                android:layout_marginBottom="10dp"
                app:cardElevation="6dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/logo"
                    android:padding="8dp"
                    android:src="@drawable/tool_icon"
                    android:background="@color/blue"/>

            </com.google.android.material.card.MaterialCardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crewwsie_field"
                android:fontFamily="@font/kavoon"
                android:textStyle="bold"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/built_for_teams_on_the_move"
                android:textColor="@color/gray_text"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etEmail"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/black"
                    android:layout_marginBottom="5dp"

                    android:background="@color/gray"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etPassword"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    android:layout_marginBottom="5dp"

                    android:background="@color/gray"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:text="@string/forgot_password"
                android:layout_gravity="end"
                android:id="@+id/tvForgotPassword"
                android:layout_marginBottom="20dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btnLogin"
                android:backgroundTint="@color/black"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>